--- a/src/pages/collection-detail/collection-detail.html
+++ b/src/pages/collection-detail/collection-detail.html
@@ -25,7 +25,7 @@
         <b>{{user.collections[index].prize}} ETH</b>
         <div class="col">
           <div *ngFor="let colReq of user.collections[index].collection;let i = index">
-            <img src="{{user.collection[i].src}}" style="float:left; margin-right: 5px; height: 30px; width: 30px;" [ngClass]="{alpha:user.collection[i].amount==0}">
+            <img src="{{user.collection[colReq.game].collection[colReq.col].src}}" style="float:left; margin-right: 5px; height: 30px; width: 30px;" [ngClass]="{alpha:user.collection[colReq.game].collection[colReq.col].amount==0}" >
           </div>
         </div>
       </ion-col>
@@ -47,11 +47,11 @@
 
     <ion-list *ngFor="let colReq of user.collections[index].collection;let i = index">
       <ion-item style="background-color: lightgrey">
-        <div>
-          <img src="{{user.collection[i].src}}" style="float:left; margin-right: 5px; height: 30px; width: 30px;" [ngClass]="{alpha:user.collection[i].amount==0}">
-        </div>
-        {{user.collection[i].name}} x{{user.collection[i].amount}}
-        <button  color="pink" ion-button default item-end (click)="goToCollectionTrade(i)">Trade</button>
+          <div>
+              <img src="{{user.collection[colReq.game].collection[colReq.col].src}}" style="float:left; margin-right: 5px; height: 30px; width: 30px;" [ngClass]="{alpha:user.collection[colReq.game].collection[colReq.col].amount==0}"  >
+            </div>
+            {{user.collection[colReq.game].collection[colReq.col].name}} x{{user.collection[colReq.game].collection[colReq.col].amount}}
+        <button  color="pink" ion-button default item-end (click)="goToCollectionTrade(colReq.game,colReq.col)">Trade</button>
       </ion-item>
     </ion-list>
   </ion-grid>
