--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -17,19 +17,19 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <img src="{{user.collection[51].src}}">
+        <img src="{{user.collection[0].collection[51].src}}">
       </ion-col>
       <ion-col>
-        <img src="{{user.collection[48].src}}">
+        <img src="{{user.collection[0].collection[48].src}}">
       </ion-col>
       <ion-col>
-        <img src="{{user.collection[50].src}}">
+        <img src="{{user.collection[0].collection[50].src}}">
       </ion-col>
       <ion-col>
-        <img src="{{user.collection[36].src}}">
+        <img src="{{user.collection[0].collection[36].src}}">
       </ion-col>
       <ion-col>
-        <img src="{{user.collection[37].src}}">
+        <img src="{{user.collection[0].collection[37].src}}">
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -38,7 +38,7 @@
     <h5>Win 1000 ETH</h5>
   </div>
   <ion-label style="font-size: 30px">you got colection</ion-label>
-  <img src="{{user.collection[50].src}}">
+  <img src="{{user.collection[0].collection[50].src}}">
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="openModal()">
