--- a/src/pages/trade-collect-buy-modal/trade-collect-buy-modal.html
+++ b/src/pages/trade-collect-buy-modal/trade-collect-buy-modal.html
@@ -5,14 +5,14 @@
 </ion-header>
 
 <ion-content padding text-center>
-  <ion-label>Buy 5 card for</ion-label>
+  <ion-label>Buy {{num}} card for</ion-label>
   <ion-item center text-center>
-    <ion-label>500</ion-label>
-    <ion-select [(ngModel)]="gender">
+    <ion-label>{{amount}}</ion-label>
+    <ion-select [(ngModel)]="gender" (ionChange)="calAmount()">
       <ion-option value="thb">THB</ion-option>
-      <ion-option value="btc">BTC</ion-option>
-      <ion-option value="e">ETH</ion-option>
-      <ion-option value="e">USD</ion-option>
+      <ion-option value="eth">ETH</ion-option>
+      <ion-option value="usd">USD</ion-option>
+
     </ion-select>
   </ion-item>
   <button style="margin-top: 20px" ion-button color="secondary" (click)="go()">convert</button>
