--- a/src/pages/trade-sell-modal/trade-sell-modal.html
+++ b/src/pages/trade-sell-modal/trade-sell-modal.html
@@ -1,19 +1,19 @@
 <ion-header>
   <ion-navbar color="pink">
-    <ion-title>trade-sell-modal</ion-title>
+    <ion-title>Sell Coin</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding text-center>
   <ion-item>
-    <ion-label>sell amount : </ion-label>
-    <ion-label>100 coin</ion-label>
+    <ion-label>Sell amount : </ion-label>
+    <ion-label>{{sellAmount}} coin</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>prize / unit : </ion-label>
-    <ion-label>500 THB</ion-label>
+    <ion-label>Prize / Unit : </ion-label>
+    <ion-label>{{sellPrice}} {{gender}}</ion-label>
   </ion-item>
-  <ion-label>total sell : 50000</ion-label>
+  <ion-label>Total sell : {{total}}</ion-label>
   <button style="margin-top: 20px" ion-button color="secondary" (click)="go()">sell</button>
   <button style="margin-top: 20px" ion-button color="danger" (click)="closeModal()">cancel</button>
 </ion-content>
