--- a/src/pages/membership/membership.html
+++ b/src/pages/membership/membership.html
@@ -34,7 +34,7 @@
   </ion-grid>
 
   <ion-grid>
-    <ion-row style="padding-top: 150px"></ion-row>
+    <ion-row style="padding-top: 180px"></ion-row>
     <ion-row padding style="color: red">
       <ion-col col-4>
         <b>
@@ -43,7 +43,7 @@
       </ion-col>
       <ion-col col-8>
         <b>{{user.coins}}</b>
-        <b> Money left: {{user.money}}</b>
+        <!-- <b> Money left: {{user.money}}</b> -->
       </ion-col>
     </ion-row>
     <ion-grid no-padding>
