Edit UI trade page, collect page

--- a/src/pages/marketplace/marketplace.html
+++ b/src/pages/marketplace/marketplace.html
@@ -23,7 +23,7 @@
 
     <ion-card-content style="background-color: #ffccf3" >
       <div class="item">
-        <b float-left class="card-top">Heart</b>
+        <b float-left class="card-top"><img style="height: 40px;width: 40px;" src="{{this.user.collection[0].collection[3].src}}"></b>
         <b float-right class="card-top">5,000 THB</b>
       </div>
     </ion-card-content>
@@ -36,7 +36,7 @@
 
     <ion-card-content style="background-color: #ffccf3">
       <div class="item">
-        <b float-left class="card-top">Club</b>
+        <b float-left class="card-top"><img style="height: 40px;width: 40px;" src="{{this.user.collection[1].collection[3].src}}"></b>
         <b float-right class="card-top">1,000 THB</b>
       </div>
     </ion-card-content>
