--- a/src/pages/membership/membership.html
+++ b/src/pages/membership/membership.html
@@ -11,7 +11,7 @@
   <ion-grid class="page-header" no-padding>
     <ion-row style="align-self: center;padding-bottom: 70px">
       <div>
-        <img src="../../assets/imgs/banner2.jpg" style="height: 140px;width: 400px" />
+        <img src="../../assets/imgs/Logo Lotto.png" style="height: 140px;width: 400px" />
       </div>
     </ion-row>
 
