--- a/src/pages/trade-buy-modal/trade-buy-modal.html
+++ b/src/pages/trade-buy-modal/trade-buy-modal.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="pink">
-    <ion-title>trade-buy-modal</ion-title>
+    <ion-title>Buy Coin</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -9,11 +9,20 @@
   <ion-item center text-center>
     <ion-label>{{amount}}</ion-label>
     <ion-select [(ngModel)]="gender" (ionChange)="calAmount()">
-      <ion-option value="thb">THB</ion-option>
-      <ion-option value="eth">ETH</ion-option>
-      <ion-option value="usd">USD</ion-option>
+      <ion-option value="THB">THB</ion-option>
+      <ion-option value="ETH">ETH</ion-option>
+      <ion-option value="USD">USD</ion-option>
     </ion-select>
   </ion-item>
-  <button style="margin-top: 20px" ion-button color="secondary" (click)="go()">Confirm</button>
-  <button style="margin-top: 20px" ion-button color="danger" (click)="closeModal()">Cancel</button>
+
+  <ion-grid class="page-footer" no-padding>
+    <ion-row>
+      <ion-col col-6 style="text-align: center;font-size: 16px">
+        <button block ion-button color="danger" (click)="closeModal()">Cancel</button>
+      </ion-col>
+      <ion-col col-6 style="text-align: center;font-size: 16px">
+        <button block ion-button color="secondary" (click)="go()">Confirm</button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
