--- a/src/pages/trade-collect-sell-modal/trade-collect-sell-modal.html
+++ b/src/pages/trade-collect-sell-modal/trade-collect-sell-modal.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="pink">
-    <ion-title>trade-sell-modal</ion-title>
+    <ion-title>Sell Collection</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -14,6 +14,14 @@
     <ion-label>{{sellPrice}} {{gender}}</ion-label>
   </ion-item>
   <ion-label>Total sell : {{total}}</ion-label>
-  <button style="margin-top: 20px" ion-button color="secondary" (click)="go()">sell</button>
-  <button style="margin-top: 20px" ion-button color="danger" (click)="closeModal()">cancel</button>
+  <ion-grid class="page-footer" no-padding>
+    <ion-row>
+      <ion-col col-6 style="text-align: center;font-size: 16px">
+        <button block ion-button color="danger" (click)="closeModal()">Cancel</button>
+      </ion-col>
+      <ion-col col-6 style="text-align: center;font-size: 16px">
+        <button block ion-button color="secondary" (click)="go()">Confirm</button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
