--- a/src/pages/confirmmodal/confirmmodal.html
+++ b/src/pages/confirmmodal/confirmmodal.html
@@ -16,6 +16,7 @@
     <ion-select [(ngModel)]="gender"  (ionChange)="calAmount()">
       <ion-option value="thb">THB</ion-option>
       <ion-option value="usd">USD</ion-option>
+      <ion-option value="btc">BTC</ion-option>
     </ion-select>
   </ion-item>
   <br>
