--- a/src/pages/receive-collection-reward-modal/receive-collection-reward-modal.html
+++ b/src/pages/receive-collection-reward-modal/receive-collection-reward-modal.html
@@ -12,6 +12,7 @@
         <ion-option value="ETH">ETH</ion-option>
       <ion-option value="THB">THB</ion-option>
       <ion-option value="USD">USD</ion-option>
+      <ion-option value="BTC">BTC</ion-option>
     </ion-select>
   </ion-item>
 
