--- a/src/pages/collection-trade/collection-trade.html
+++ b/src/pages/collection-trade/collection-trade.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="pink">
+  <ion-toolbar color="mana">
       <button ion-button clear small (click)="backpage()">
           <ion-icon name="arrow-back"></ion-icon>
         </button>
