--- a/src/pages/convertclick-b/convertclick-b.html
+++ b/src/pages/convertclick-b/convertclick-b.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar color="pink">
+  <ion-navbar color="mana">
     <ion-title>Convert Ticket</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
@@ -61,7 +61,7 @@
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="presentConfirm()">
-        <button ion-button color="dark" clear block>
+        <button ion-button color="light" clear block>
           <b>Confirm</b>
         </button>
       </ion-col>
