--- a/src/pages/game-detail/game-detail.html
+++ b/src/pages/game-detail/game-detail.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-toolbar color="pink">
+  <ion-toolbar color="mana">
     <button ion-button clear small (click)="gotoPrePlaygamePage()">
       <ion-icon name="arrow-back"></ion-icon>
     </button>
