--- a/src/pages/money/money.html
+++ b/src/pages/money/money.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar color="pink">
+  <ion-navbar color="mana">
     <ion-title>ICO PHASE</ion-title>
   </ion-navbar>
 </ion-header>
