--- a/src/pages/trade-collect-sell-modal/trade-collect-sell-modal.html
+++ b/src/pages/trade-collect-sell-modal/trade-collect-sell-modal.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="pink">
+  <ion-navbar color="mana">
     <ion-title>Sell Collection</ion-title>
   </ion-navbar>
 </ion-header>
