--- a/src/pages/tradehistory/tradehistory.html
+++ b/src/pages/tradehistory/tradehistory.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="pink" his>
+  <ion-navbar color="mana" his>
     <ion-title center text-center>Trade History</ion-title>
   </ion-navbar>
 </ion-header>
