--- a/src/pages/buy-collection/buy-collection.html
+++ b/src/pages/buy-collection/buy-collection.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="pink">
+  <ion-toolbar color="mana">
     <button ion-button clear small (click)="backpage()">
       <ion-icon name="arrow-back"></ion-icon>
     </button>
@@ -51,6 +51,6 @@
 </ion-content>
 <ion-footer no-shadow>
   <ion-toolbar position="bottom">
-    <button style="background-color: lightcoral;color:black" ion-button full (click)="presentConfirm()">Confirm</button>
+    <button style="background-color:mana;color:black" ion-button full (click)="presentConfirm()">Confirm</button>
   </ion-toolbar>
 </ion-footer>
