--- a/src/pages/confmslotmodal/confmslotmodal.html
+++ b/src/pages/confmslotmodal/confmslotmodal.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar color="pink">
+    <ion-navbar color="mana">
       <ion-title>Convert Reward</ion-title>
     </ion-navbar>
   </ion-header>
