--- a/src/pages/game-detail-b/game-detail-b.html
+++ b/src/pages/game-detail-b/game-detail-b.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-toolbar color="pink">
+  <ion-toolbar color="mana">
     <button ion-button clear small (click)="backpage()">
       <ion-icon name="arrow-back"></ion-icon>
     </button>
