--- a/src/pages/game-detail-d/game-detail-d.html
+++ b/src/pages/game-detail-d/game-detail-d.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar color="pink">
+  <ion-navbar color="mana">
     <ion-title>Game DDD</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
