--- a/src/pages/home2/home2.html
+++ b/src/pages/home2/home2.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar color="pink">
+    <ion-navbar color="mana">
       <ion-buttons right>
         <button ion-button>
           <ion-icon name="bookmark"></ion-icon>
