--- a/src/pages/lottogame/lottogame.html
+++ b/src/pages/lottogame/lottogame.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="pink">
+  <ion-toolbar color="mana">
     <button ion-button clear small (click)="backpage()">
       <ion-icon name="arrow-back"></ion-icon>
     </button>
@@ -54,7 +54,7 @@
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="Gameresult()">
-        <button ion-button color="dark" clear block>
+        <button ion-button color="light" clear block>
           <b>Result</b>
         </button>
       </ion-col>
