--- a/src/pages/trade-collect-buy-modal/trade-collect-buy-modal.html
+++ b/src/pages/trade-collect-buy-modal/trade-collect-buy-modal.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="pink">
+  <ion-navbar color="mana">
     <ion-title>Buy Collection</ion-title>
   </ion-navbar>
 </ion-header>
