--- a/src/pages/wingame/wingame.html
+++ b/src/pages/wingame/wingame.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="pink">
+  <ion-toolbar color="mana">
     <button ion-button clear small (click)="gotoPrePlaygamePage()">
       <ion-icon name="arrow-back"></ion-icon>
     </button>
