--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -41,8 +41,8 @@
       </ion-grid>
     </ion-item>
   </ion-list>
-  <button ion-button (click)="goBuyCoin()">เข้าหน้าซื้อ Coin</button>
-  <button ion-button (click)="goSubscribe()">เข้าหน้าสมัคร</button>
+  <!-- <button ion-button (click)="goBuyCoin()">เข้าหน้าซื้อ Coin</button>
+  <button ion-button (click)="goSubscribe()">เข้าหน้าสมัคร</button> -->
   
   <!-- <ion-footer>
         <div style="text-align: right;margin-right: 30px">{{user.money}}</div>
