--- a/src/pages/convertclick/convertclick.html
+++ b/src/pages/convertclick/convertclick.html
@@ -41,13 +41,16 @@
     </ion-row>
   </ion-grid>
 
-  <ion-grid class="page-footer" no-padding>
+
+</ion-content>
+<ion-footer>
+    <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="presentConfirm()">
-        <button ion-button color="light" clear block>
+        <button ion-button style="color: white" clear block>
           <b>Confirm</b>
         </button>
       </ion-col>
     </ion-row>
   </ion-grid>
-</ion-content>
+</ion-footer>
