--- a/src/pages/gameresultslot/gameresultslot.html
+++ b/src/pages/gameresultslot/gameresultslot.html
@@ -13,7 +13,7 @@
 
 </ion-header>
 <ion-content padding text-center>
-  <ion-toolbar color="pink">
+  <ion-toolbar>
     <ion-title>Lotto Slot</ion-title>
   </ion-toolbar>
   <div>
@@ -23,6 +23,9 @@
 
   <ion-label style="font-size: 20px">you got collection</ion-label>
   <img src="../../assets/imgs/banana.png">
+
+</ion-content>
+<ion-footer>
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="Done()">
@@ -32,4 +35,4 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-</ion-content>
+</ion-footer>
