--- a/src/pages/trade/trade.html
+++ b/src/pages/trade/trade.html
@@ -86,16 +86,7 @@
           </ion-list>
         </ion-grid>
 
-        <ion-grid class="page-footer" no-padding>
-          <ion-row>
-            <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirm()">
-              <button ion-button clear block style="color : white">
-                <b>Confirm</b>
-              </button>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-
+      
       </ion-list>
 
 
@@ -185,18 +176,35 @@
             </ion-item>
           </ion-list>
         </ion-grid>
-
-        <ion-grid class="page-footer" no-padding>
-          <ion-row>
-            <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirmSell()">
-              <button ion-button color="dark" clear block style="color: white">
-                <B>Confirm</B>
-              </button>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
+      
       </ion-list>
     </div>
   </div>
 
+  
+
 </ion-content>
+<ion-footer *ngIf="Trade=='buy'">
+    <ion-grid class="page-footer" no-padding>
+        <ion-row>
+          <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirmSell()">
+            <button ion-button color="dark" clear block style="color: white">
+              <B>Confirm</B>
+            </button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+</ion-footer>
+
+<ion-footer *ngIf="Trade=='sell'">
+    <ion-grid class="page-footer" no-padding>
+        <ion-row>
+          <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirm()">
+            <button ion-button clear block style="color : white">
+              <b>Confirm</b>
+            </button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+</ion-footer>
