--- a/src/pages/game-detail/game-detail.html
+++ b/src/pages/game-detail/game-detail.html
@@ -32,7 +32,7 @@
   <ion-row class="bannerButton">
     <ion-col col-1></ion-col>
     <ion-col col-5 class="overButton">
-      <button ion-button full color="pink" (click)="goToPrePlay()">
+      <button ion-button full color="mana" (click)="goToPrePlay()">
         <b>Play Game</b>
       </button>
     </ion-col>
@@ -44,10 +44,10 @@
     <ion-col col-1></ion-col>
   </ion-row>
 
-  <ion-grid style="margin-top:60px">
+  <ion-grid style="margin-top:40px">
     <ion-row>
       <ion-col col-12 style="font-weight: bold">
-        Title text
+        <h3>กติกาการเล่น</h3>
       </ion-col>
       <ion-col col-12>
         Description xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
@@ -59,13 +59,16 @@
   </ion-grid>
 
 
-  <ion-grid class="page-footer" no-padding>
+
+</ion-content>
+<ion-footer>
+    <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="goToConvertClick()">
-        <button ion-button color="dark" clear block>
+        <button ion-button style="color:white" clear block>
           <b>Convert ticket</b>
         </button>
       </ion-col>
     </ion-row>
   </ion-grid>
-</ion-content>
+</ion-footer>
