--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -37,8 +37,12 @@
   <div>
     <h5>Win 100 ETH</h5>
   </div>
-  <ion-label style="font-size: 30px">you got colection</ion-label>
+  <ion-label style="font-size: 20px">you got collection</ion-label>
   <img src="{{user.collection[0].collection[49].src}}">
+
+
+</ion-content>
+<ion-footer>
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="openModal()">
@@ -48,5 +52,4 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-
-</ion-content>
+</ion-footer>
