--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -67,7 +67,11 @@
   </div>
   <div style="padding-bottom: 60px"></div>
 
-  <ion-grid class="page-footer" no-padding>
+
+
+</ion-content>
+<ion-footer>
+    <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="goToConvert()">
         <button ion-button style="color:white;" clear block>
@@ -76,5 +80,4 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-
-</ion-content>
+</ion-footer>
