--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -45,7 +45,7 @@
 <ion-footer>
   <ion-grid class="page-footer" no-padding>
     <ion-row>
-      <ion-col col-12 style="text-align: center;font-size: 16px" (click)="openModal()">
+      <ion-col col-12 style="text-align: center;font-size: 16px" (click)="Done()">
         <button ion-button style="color:white;" clear block>
           <b>Done</b>
         </button>
