--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,8 +14,8 @@
 <ion-content>
 
   <ion-list>
-    <ion-item  *ngFor="let noti of user.notice.slice().reverse()" no-padding>
-      <ion-grid (click)="noti.clickAble ? goMembership(): null">
+    <ion-item  *ngFor="let noti of user.notice.slice().reverse(); let i = index" no-padding>
+      <ion-grid (click)=" noti.index>=0 ? openModal(i) : noti.clickAble ? goMembership(): null">
         <ion-row>
           <ion-col col-2>
             <div style="padding-top: 30px">
@@ -41,9 +41,9 @@
       </ion-grid>
     </ion-item>
   </ion-list>
-  <!-- <button ion-button (click)="goBuyCoin()">เข้าหน้าซื้อ Coin</button>
-  <button ion-button (click)="goSubscribe()">เข้าหน้าสมัคร</button> -->
-  
+   <!-- <button ion-button (click)="goBuyCoin()">เข้าหน้าซื้อ Coin</button>
+  <button ion-button (click)="goSubscribe()">เข้าหน้าสมัคร</button> 
+   -->
   <!-- <ion-footer>
         <div style="text-align: right;margin-right: 30px">{{user.money}}</div>
          <div><img src="../../assets/imgs/foot.PNG" (click)="ScanQR()" /></div>
