--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -30,7 +30,8 @@
         </ion-col>
         <ion-col col-4 offset-4>
 
-          <ion-badge color="secondary"> (Ticket {{user.scratchGame.tickets}})</ion-badge>
+          <ion-badge  *ngIf ="user.scratchGame.tickets==0" color="danger"> No tickets</ion-badge>
+          <ion-badge *ngIf ="user.scratchGame.tickets>0" color="secondary"> (Ticket {{user.scratchGame.tickets}})</ion-badge>
 
         </ion-col>
       </ion-row>
@@ -50,7 +51,8 @@
         </ion-col>
         <ion-col col-4 offset-4>
 
-          <ion-badge color="secondary"> (Ticket {{user.slotGame.tickets}})</ion-badge>
+          <ion-badge  *ngIf ="user.slotGame.tickets==0" color="danger"> No tickets</ion-badge>
+          <ion-badge *ngIf ="user.slotGame.tickets>0" color="secondary"> (Ticket {{user.slotGame.tickets}})</ion-badge>
 
         
 
